<resources>
    <string name="app_name">SQLite</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="marks">Marks</string>
    <string name="save">Save data</string>
    <string name="show_data">Show data</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all">Delete all</string>
</resources>
